First Working Version 1.0

--- a/app/src/main/res/drawable/button_right_round.xml
+++ b/app/src/main/res/drawable/button_right_round.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <solid android:color="@color/BackgroundDim"/>
-    <corners android:topRightRadius="25dp"
-        android:bottomRightRadius="25dp"/>
+    <corners android:topRightRadius="@dimen/rounded_button_corner"
+        android:bottomRightRadius="@dimen/rounded_button_corner"/>
 
 
 </shape>
