--- a/app/src/main/res/layout/forgrt_password_fragment.xml
+++ b/app/src/main/res/layout/forgrt_password_fragment.xml
@@ -23,8 +23,10 @@
                 android:background="@color/Foreground"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.0">
 
 
                 <TextView
@@ -34,29 +36,30 @@
                     android:layout_marginTop="70dp"
                     android:text="@string/reset_password"
                     android:textSize="36sp"
+                    android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <EditText
-                    android:id="@+id/phoneNumberWithPassword"
+                    android:id="@+id/phoneNumber"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="50dp"
-
+                    android:text="@={viewModel.forgetNumber}"
                     android:layout_marginEnd="24dp"
                     android:layout_marginRight="24dp"
                     android:background="@drawable/button_right_round"
                     android:hint="@string/phone"
                     android:inputType="phone"
-                    android:paddingLeft="2dp"
-                    android:paddingTop="14dp"
-                    android:paddingRight="20dp"
-                    android:paddingBottom="14dp"
+                    android:paddingLeft="0dp"
+                    android:paddingTop="@dimen/padding_edittext_top_bottom"
+                    android:paddingRight="@dimen/edit_text_side_padding"
+                    android:paddingBottom="@dimen/padding_edittext_top_bottom"
                     android:selectAllOnFocus="true"
                     android:textColor="@color/Foreground"
                     android:textColorHint="@color/Foreground"
-                    android:textSize="24sp"
+                    android:textSize="22sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/countryCodePicker"
                     app:layout_constraintTop_toBottomOf="@+id/textView21" />
@@ -68,22 +71,22 @@
                     android:layout_marginStart="24dp"
                     android:layout_marginTop="8dp"
                     android:layout_marginEnd="24dp"
-
+                    android:text="@={viewModel.forgetPassword}"
                     android:background="@drawable/rounded_button"
                     android:hint="@string/new_password"
                     android:imeOptions="actionDone"
                     android:inputType="textPassword"
-                    android:paddingLeft="20dp"
-                    android:paddingTop="14dp"
-                    android:paddingRight="20dp"
-                    android:paddingBottom="14dp"
+                    android:paddingLeft="@dimen/edit_text_side_padding"
+                    android:paddingTop="@dimen/padding_edittext_top_bottom"
+                    android:paddingRight="@dimen/edit_text_side_padding"
+                    android:paddingBottom="@dimen/padding_edittext_top_bottom"
                     android:selectAllOnFocus="true"
                     android:textColor="@color/Foreground"
                     android:textColorHint="@color/Foreground"
-                    android:textSize="24sp"
+                    android:textSize="22sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/phoneNumberWithPassword" />
+                    app:layout_constraintTop_toBottomOf="@+id/phoneNumber" />
 
                 <ImageView
                     android:id="@+id/passwordVisibility"
@@ -93,10 +96,10 @@
                     android:layout_marginRight="16dp"
                     android:adjustViewBounds="true"
                     android:src="@drawable/ic_visibility"
-                    app:tint="#000000"
                     app:layout_constraintBottom_toBottomOf="@+id/password"
                     app:layout_constraintEnd_toEndOf="@+id/password"
-                    app:layout_constraintTop_toTopOf="@+id/password" />
+                    app:layout_constraintTop_toTopOf="@+id/password"
+                    app:tint="@color/Foreground" />
 
                 <Button
                     android:id="@+id/login"
@@ -106,10 +109,13 @@
                     android:layout_marginStart="48dp"
                     android:layout_marginTop="50dp"
                     android:layout_marginEnd="48dp"
-                    android:paddingTop="15dp"
-                    android:paddingBottom="15dp"
+                    android:paddingTop="6dp"
+                    android:paddingBottom="6dp"
+                    android:enabled="@{(viewModel.buttonEnabled &amp;&amp; !viewModel.processing) ? true : false }"
                     android:text="@string/send_code"
+                    android:onClick="@{() -> viewModel.onSendCodeButtonClick()}"
                     android:textColor="@color/Foreground"
+                    android:backgroundTint="@drawable/custom_button"
                     android:textSize="24sp"
                     app:backgroundTint="@color/Background"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -136,17 +142,16 @@
                     android:layout_marginLeft="24dp"
                     android:background="@drawable/button_left_round"
                     android:paddingLeft="8dp"
-                    android:paddingTop="7dp"
+                    android:paddingTop="4dp"
                     android:paddingRight="0dp"
                     app:ccp_contentColor="@color/Foreground"
                     app:ccp_defaultNameCode="BD"
                     app:ccp_showFlag="false"
                     app:ccp_showNameCode="false"
-                    app:ccp_textSize="24sp"
-                    app:layout_constraintBottom_toBottomOf="@+id/phoneNumberWithPassword"
+                    app:ccp_textSize="22sp"
+                    app:layout_constraintBottom_toBottomOf="@+id/phoneNumber"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/phoneNumberWithPassword" />
-
+                    app:layout_constraintTop_toTopOf="@+id/phoneNumber" />
 
 
             </androidx.constraintlayout.widget.ConstraintLayout>
