--- a/app/src/main/res/layout/signup_fragment.xml
+++ b/app/src/main/res/layout/signup_fragment.xml
@@ -13,23 +13,24 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".view.fragments.SignupFragment">
+        tools:context=".view.fragments.SignupFragment"
+        android:background="@color/Foreground">
 
         <androidx.constraintlayout.widget.ConstraintLayout
 
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/Foreground">
+            android:layout_height="wrap_content">
 
 
             <TextView
                 android:id="@+id/textView21"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="60dp"
+                android:layout_marginTop="46dp"
                 android:text="@string/welcome"
                 android:textColor="@color/colorGray"
                 android:textSize="36sp"
+                android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -38,24 +39,22 @@
                 android:id="@+id/sign_up_name"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
                 android:layout_marginLeft="24dp"
                 android:layout_marginTop="50dp"
-                android:layout_marginEnd="24dp"
                 android:layout_marginRight="24dp"
                 android:background="@drawable/rounded_button"
                 android:ems="10"
                 android:focusable="auto"
                 android:hint="@string/your_name"
                 android:inputType="textPersonName"
-                android:paddingLeft="20dp"
-                android:paddingTop="14dp"
-                android:paddingRight="20dp"
-                android:paddingBottom="14dp"
+                android:paddingLeft="@dimen/edit_text_side_padding"
+                android:paddingTop="@dimen/padding_edittext_top_bottom"
+                android:paddingRight="@dimen/edit_text_side_padding"
+                android:paddingBottom="@dimen/padding_edittext_top_bottom"
                 android:text="@={viewModel.userName}"
                 android:textColor="@color/Foreground"
                 android:textColorHint="@color/Foreground"
-                android:textSize="24sp"
+                android:textSize="22sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView21" />
@@ -68,13 +67,13 @@
                 android:layout_marginLeft="24dp"
                 android:background="@drawable/button_left_round"
                 android:paddingLeft="8dp"
-                android:paddingTop="7dp"
+                android:paddingTop="4dp"
                 android:paddingRight="0dp"
                 app:ccp_contentColor="@color/Foreground"
                 app:ccp_defaultNameCode="BD"
                 app:ccp_showFlag="false"
                 app:ccp_showNameCode="false"
-                app:ccp_textSize="24sp"
+                app:ccp_textSize="22sp"
                 app:layout_constraintBottom_toBottomOf="@+id/sign_up_phone"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/sign_up_phone" />
@@ -84,22 +83,20 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
 
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="14dp"
                 android:layout_marginEnd="24dp"
                 android:layout_marginRight="24dp"
                 android:background="@drawable/button_right_round"
                 android:hint="@string/phone"
                 android:inputType="phone"
-                android:paddingStart="5dp"
-                android:paddingLeft="2dp"
-                android:paddingTop="14dp"
-                android:paddingEnd="20dp"
-                android:paddingRight="20dp"
-                android:paddingBottom="14dp"
+                android:paddingLeft="0dp"
+                android:paddingTop="@dimen/padding_edittext_top_bottom"
+                android:paddingRight="@dimen/edit_text_side_padding"
+                android:paddingBottom="@dimen/padding_edittext_top_bottom"
                 android:text="@={viewModel.phoneNumber}"
                 android:textColor="@color/Foreground"
                 android:textColorHint="@color/Foreground"
-                android:textSize="24sp"
+                android:textSize="22sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/country_code_picker"
                 app:layout_constraintTop_toBottomOf="@+id/sign_up_name" />
@@ -109,22 +106,22 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="14dp"
 
                 android:layout_marginEnd="24dp"
                 android:background="@drawable/rounded_button"
                 android:hint="@string/password"
                 android:imeOptions="actionDone"
                 android:inputType="textPassword"
-                android:paddingLeft="20dp"
-                android:paddingTop="14dp"
-                android:paddingRight="20dp"
-                android:paddingBottom="14dp"
+                android:paddingLeft="@dimen/edit_text_side_padding"
+                android:paddingTop="@dimen/padding_edittext_top_bottom"
+                android:paddingRight="@dimen/edit_text_side_padding"
+                android:paddingBottom="@dimen/padding_edittext_top_bottom"
                 android:selectAllOnFocus="true"
                 android:text="@={viewModel.password}"
                 android:textColor="@color/Foreground"
                 android:textColorHint="@color/Foreground"
-                android:textSize="24sp"
+                android:textSize="22sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/sign_up_phone" />
@@ -148,25 +145,22 @@
                 android:id="@+id/confirm_sign_up_password"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-
-                android:layout_marginStart="24dp"
                 android:layout_marginLeft="24dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="24dp"
+                android:layout_marginTop="14dp"
                 android:layout_marginRight="24dp"
                 android:background="@drawable/rounded_button"
                 android:hint="@string/confirm_password"
                 android:imeOptions="actionDone"
                 android:inputType="textPassword"
-                android:paddingLeft="20dp"
-                android:paddingTop="14dp"
-                android:paddingRight="20dp"
-                android:paddingBottom="14dp"
+                android:paddingLeft="@dimen/edit_text_side_padding"
+                android:paddingTop="@dimen/padding_edittext_top_bottom"
+                android:paddingRight="@dimen/edit_text_side_padding"
+                android:paddingBottom="@dimen/padding_edittext_top_bottom"
                 android:selectAllOnFocus="true"
                 android:text="@={viewModel.conPassword}"
                 android:textColor="@color/Foreground"
                 android:textColorHint="@color/Foreground"
-                android:textSize="24sp"
+                android:textSize="22sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/sign_up_password" />
@@ -174,19 +168,22 @@
 
             <Button
                 android:id="@+id/sign_up_button"
-                android:layout_width="wrap_content"
+                android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="50dp"
-                android:enabled="@{viewModel.buttonEnabled}"
+                android:layout_marginStart="24dp"
+                android:layout_marginLeft="24dp"
+                android:layout_marginTop="30dp"
+                android:layout_marginEnd="24dp"
+                android:layout_marginRight="24dp"
+                android:backgroundTint="@drawable/custom_button"
+                android:enabled="@{(viewModel.buttonEnabled &amp;&amp; !viewModel.processingSignUp) ? true : false }"
                 android:onClick="@{() -> viewModel.onRegisterButtonClick()}"
-                android:paddingLeft="20dp"
-                android:paddingTop="15dp"
-                android:paddingRight="20dp"
-                android:paddingBottom="15dp"
+                android:paddingTop="6dp"
+                android:paddingBottom="6dp"
                 android:text="@string/registration"
                 android:textColor="@color/Foreground"
                 android:textSize="24sp"
-                app:backgroundTint="@color/Background"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/confirm_sign_up_password" />
