--- a/app/src/main/res/layout/verify_number_fragment.xml
+++ b/app/src/main/res/layout/verify_number_fragment.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
     <data>
         <variable
             name="viewModel"
             type="com.carbondev.tallynote.view.viewmodel.VerifyNumberViewModel" />
     </data>
-    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         tools:context=".view.fragments.VerifyNumberFragment">
 
 
@@ -23,7 +23,7 @@
                 android:id="@+id/textView32"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="32dp"
+                android:layout_marginTop="50dp"
                 android:text="@string/verification_code"
                 android:textColor="@color/colorAccent"
                 android:textSize="36sp"
@@ -34,20 +34,25 @@
 
             <EditText
                 android:id="@+id/editText3"
-                android:layout_width="200dp"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="24dp"
+                android:layout_marginLeft="24dp"
                 android:layout_marginTop="100dp"
+                android:layout_marginEnd="24dp"
+                android:layout_marginRight="24dp"
                 android:background="@drawable/rounded_button"
                 android:ems="10"
                 android:hint="@string/code"
                 android:inputType="number"
-                android:paddingLeft="20dp"
-                android:paddingTop="14dp"
-                android:paddingRight="20dp"
-                android:paddingBottom="14dp"
+                android:paddingLeft="@dimen/edit_text_side_padding"
+                android:paddingTop="@dimen/padding_edittext_top_bottom"
+                android:paddingRight="@dimen/edit_text_side_padding"
+                android:paddingBottom="@dimen/padding_edittext_top_bottom"
                 android:text="@={viewModel.receivedCode}"
                 android:textColor="@color/Foreground"
                 android:textColorHint="@color/Foreground"
+                android:textSize="22sp"
                 app:layout_constraintBottom_toTopOf="@+id/numberVerifyButton"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
@@ -56,13 +61,17 @@
 
             <Button
                 android:id="@+id/numberVerifyButton"
-                android:layout_width="wrap_content"
+                android:layout_width="200dp"
                 android:layout_height="wrap_content"
+                android:textSize="22sp"
+                android:backgroundTint="@drawable/custom_button"
+                android:layout_marginStart="24dp"
+                android:layout_marginLeft="24dp"
                 android:layout_marginTop="32dp"
-                android:paddingLeft="20dp"
-                android:paddingTop="15dp"
-                android:paddingRight="20dp"
-                android:paddingBottom="15dp"
+                android:layout_marginEnd="24dp"
+                android:layout_marginRight="24dp"
+                android:paddingTop="6dp"
+                android:paddingBottom="6dp"
                 android:text="@string/verify"
                 android:textColor="@color/Foreground"
                 app:layout_constraintEnd_toEndOf="parent"
