--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,7 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="rounded_button_corner">16dp</dimen>
+    <dimen name="edit_text_side_padding">18dp</dimen>
+    <dimen name="padding_edittext_top_bottom">12dp</dimen>
 </resources>
