--- a/app/src/main/res/drawable/button_left_round.xml
+++ b/app/src/main/res/drawable/button_left_round.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <solid android:color="@color/BackgroundDim"/>
-    <corners android:topLeftRadius="25dp"
-        android:bottomLeftRadius="25dp"/>
+    <corners android:topLeftRadius="@dimen/rounded_button_corner"
+        android:bottomLeftRadius="@dimen/rounded_button_corner"/>
 
 
 </shape>
