--- a/app/src/main/res/drawable/rounded_button.xml
+++ b/app/src/main/res/drawable/rounded_button.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <solid android:color="@color/BackgroundDim"/>
-    <corners android:radius="25dp"/>
+    <corners android:radius="@dimen/rounded_button_corner"/>
 
 
 </shape>
