--- a/app/src/main/res/layout/customer_history_layout.xml
+++ b/app/src/main/res/layout/customer_history_layout.xml
@@ -30,12 +30,13 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="24dp"
             android:onClick="@{() -> detailViewModel.onPayDueButtonClick()}"
+            android:background="@drawable/rounded_black_shape"
+            app:backgroundTint="@color/blackButton"
             android:paddingLeft="20dp"
             android:paddingTop="10dp"
             android:paddingRight="20dp"
             android:paddingBottom="10dp"
             android:text="@string/add_money"
-            app:backgroundTint="@color/colorButton"
             app:layout_constraintBottom_toBottomOf="@+id/recycler_view_history"
             app:layout_constraintEnd_toStartOf="@+id/sellButton"
             app:layout_constraintStart_toStartOf="parent" />
@@ -51,7 +52,8 @@
             android:paddingRight="20dp"
             android:paddingBottom="10dp"
             android:text="@string/add_data"
-            app:backgroundTint="@color/colorButton"
+            android:background="@drawable/rounded_black_shape"
+            app:backgroundTint="@color/blackButton"
             app:layout_constraintBottom_toBottomOf="@+id/recycler_view_history"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/paymentButton" />
