--- a/app/src/main/res/drawable/rounded_button.xml
+++ b/app/src/main/res/drawable/rounded_button.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-<!--    <solid android:color="@color/colorButton"/>-->
-    <stroke android:width="2dp"
+    <solid android:color="@color/Foreground" />
+    <stroke
+        android:width="2dp"
         android:color="@color/darkText" />
-    <corners android:radius="@dimen/rounded_button_corner"/>
+    <corners android:radius="@dimen/rounded_button_corner" />
 
 
 </shape>
